Distortion In Portfolio Solved

--- a/style.css
+++ b/style.css
@@ -3668,6 +3668,7 @@ a:focus,
 	width: 100%;
 	height: 250px;
 	overflow: hidden;
+	object-fit: cover;
 }
 
 .facebook-area p
